# TRTCCustomDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tencent/trtccustom/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  business.cmake  business_jni.cpp
app/src/main/cpp/basic/: constant.h  java_basic_jni.cpp  java_basic_jni.h  jni_helper.cpp  jni_helper.h  jni_util.cpp  jni_util.h  jvm_wrapper.cpp
app/src/main/cpp/capture/audio/: audio_capture.cpp  audio_capture.h  audio_capture_stream_callback.cpp  audio_capture_stream_callback.h
app/src/main/cpp/player/audio/: audio_player.cpp  audio_player.h  audio_player_manager.cpp  audio_player_manager.h  audio_player_stream_callback.cpp  audio_player_stream_callback.h  audio_ring_buffer.cpp  audio_ring_buffer.h  audio_stream_callback.cpp  audio_stream_callback.h
app/src/main/cpp/trtc/: trtc_core.cpp  trtc_core.h
app/src/main/cpp/trtc/include/: trtc_cloud.h  trtc_cloud_defines.h  trtc_cloud_delegate.h  trtc_cloud_delegate_restricted.h  trtc_cloud_restricted.h
app/src/main/cpp/util/: audio_ring_buffer.cpp  audio_ring_buffer.h  jvm_wrapper.cpp  log_util.h  user_sig_generator.h
app/src/main/java/com/tencent/trtccustom/: AudioApi.java  BaseActivity.java  JNIManager.java  MainActivity.java  SimpleEnterActivity.java  (+1 more)
app/src/main/res/layout/: activity_main.xml  activity_simple_transport.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
